--- a/code/StorageAnalyzer/VisualStorage.xaml
+++ b/code/StorageAnalyzer/VisualStorage.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="StorageAnalyzer.VisualStorage"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="VisualStorage" Height="300" Width="600">
+        Title="VisualStorage" Height="Auto" Width="600">
       <StackPanel Name="MainPanel" Background="Gray">
         <Label HorizontalAlignment="Center" HorizontalContentAlignment="Center"  FontSize="14" Background="LightGoldenrodYellow" Height="30" FontWeight="Bold" Name="Contentlabel" Width="398" />
         <StackPanel Margin="10" Orientation="Horizontal" HorizontalAlignment="Center">
@@ -10,6 +10,21 @@
             <Label Content="NumOfDirectories :" HorizontalAlignment="Center" HorizontalContentAlignment="Left"  FontSize="10" FontWeight="Bold" Height="25" Name="FreeSpacelabel" Width="100" />
             <TextBox Name="DirNum" Background="LawnGreen" TextAlignment="Center" Height="25" FontSize="10" Width="100" />
         </StackPanel>
-        </StackPanel>
+        <Grid Name="DynamicGrid" Margin="5" Height="Auto" Background="LightGray">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"></RowDefinition>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="100"></ColumnDefinition>
+                <ColumnDefinition Width="100"></ColumnDefinition>
+                <ColumnDefinition Width="100"></ColumnDefinition>
+                <ColumnDefinition Width="100"></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+            <Label  HorizontalContentAlignment="Center" Content="Name" Grid.Row="0" FontWeight="Bold" Grid.Column="0"></Label>
+            <Label  HorizontalContentAlignment="Center" Content="Extension" Grid.Row="0"  FontWeight="Bold" Grid.Column="1"></Label>
+            <Label  HorizontalContentAlignment="Center" Content="Size" Grid.Row="0"  FontWeight="Bold" Grid.Column="2"></Label>
+            <Label  HorizontalContentAlignment="Center" Content="LastChanged" Grid.Row="0"  FontWeight="Bold" Grid.Column="3"></Label>
+        </Grid>
+    </StackPanel>
     
 </Window>
