--- a/code/StorageAnalyzer/VisualStorage.xaml
+++ b/code/StorageAnalyzer/VisualStorage.xaml
@@ -1,7 +1,8 @@
 ﻿<Window x:Class="StorageAnalyzer.VisualStorage"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="VisualStorage" Height="Auto" Width="600">
+        Title="VisualStorage" Height="600" Width="600">
+    <ScrollViewer VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Visible">
       <StackPanel Name="MainPanel" Background="Gray">
         <Label HorizontalAlignment="Center" HorizontalContentAlignment="Center"  FontSize="14" Background="LightGoldenrodYellow" Height="30" FontWeight="Bold" Name="Contentlabel" Width="398" />
         <StackPanel Margin="10" Orientation="Horizontal" HorizontalAlignment="Center">
@@ -15,10 +16,10 @@
                 <RowDefinition Height="Auto"></RowDefinition>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="100"></ColumnDefinition>
-                <ColumnDefinition Width="100"></ColumnDefinition>
-                <ColumnDefinition Width="100"></ColumnDefinition>
-                <ColumnDefinition Width="100"></ColumnDefinition>
+                <ColumnDefinition Width="Auto"></ColumnDefinition>
+                <ColumnDefinition Width="Auto"></ColumnDefinition>
+                <ColumnDefinition Width="200"></ColumnDefinition>
+                <ColumnDefinition Width="Auto"></ColumnDefinition>
             </Grid.ColumnDefinitions>
             <Label  HorizontalContentAlignment="Center" Content="Name" Grid.Row="0" FontWeight="Bold" Grid.Column="0"></Label>
             <Label  HorizontalContentAlignment="Center" Content="Extension" Grid.Row="0"  FontWeight="Bold" Grid.Column="1"></Label>
@@ -26,5 +27,5 @@
             <Label  HorizontalContentAlignment="Center" Content="LastChanged" Grid.Row="0"  FontWeight="Bold" Grid.Column="3"></Label>
         </Grid>
     </StackPanel>
-    
+    </ScrollViewer>
 </Window>
